# spetlr-lakehouse-template-v2

./: .gitignore  LICENSE  README.md  requirements-deploy.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/deploy/: authenticate_terraform_with_secrets.ps1  github_SPN.ps1  setup_deploying_SPN.ps1
.github/terraform/: main.tf  providers.tf  variables.tf
.github/workflows/: cloud-and-account-deployment.yml  cloud-and-account-pr-pipeline.yml  cloud-and-account-template.yml  databricks-application-deployment.yml  databricks-application-template.yml  databricks-metastore-template.yml  databricks-mlops-deployment.yml  databricks-mlops-pr-pipeline.yml  databricks-workspace-deployment.yml  databricks-workspace-pr-pipeline.yml  databricks-workspace-template.yml  pr-pipeline.yml  template-cloud-and-account-deployment.yml  template-cloud-and-account-plan.yml  template-cloud-and-account-pr-pipeline.yml  template-databricks-metastore-deployment.yml  template-databricks-metastore-plan.yml  template-databricks-mlops-deployment.yml  template-databricks-workspace-deployment.yml  template-spetlr-cluster-test.yml  template-spetlr-unit-test.yml  template-workspace-terraform-plan.yml  terraform-cloud-resources-template.yml  terraform-resources-deployment.yml  terraform-resources-template.yml  unit-test-template.yml  unittest_template.yml
example from ado pipelines/: README.md  main.tf
example from ado pipelines/pipelines/: deploy.yml
mlops_notebooks/nyc_tlc/: nyc_automl.py  nyc_inference_prediction.py  (+1 more)
tools/: build_spark_conf.ps1  set_lib_env.ps1
(+147 files in other folders)
