[metadata]
name = dataplatform
version = 0
description = SPETLR Lakehouse Demo


[options]
python_requires = >=3.9
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = 
    spetlr
    azureml


[options.package_data]
* = *.json, *.sql, *.yaml, *.yml

[options.packages.find]
where = src
    
[options.entry_points]
console_scripts = 
    nyc_tlc_bronze = dataplatform.etl.nyc_tlc.bronze.main:main
    nyc_tlc_silver = dataplatform.etl.nyc_tlc.silver.main:main
    nyc_tlc_gold = dataplatform.etl.nyc_tlc.gold.main:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores = __init__.py:F401

[tool:pytest]
pythonpath = src

