[metadata]
name = dataplatform
version = 1
description = SPETLR Lakehouse Demo


[options]
python_requires = >=3.9
include_package_data = True
package_dir=
    =src
packages = find:
install_requires = 
    spetlr
    azureml


[options.package_data]
* = *.json, *.sql, *.yaml, *.yml

[options.packages.find]
where = src
    
[options.entry_points]
console_scripts = 
    nyc_tlc = dataplatform.etl.nyc_tlc.main:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores = __init__.py:F401

[tool:pytest]
pythonpath = src

